# snakemake-logger-plugin-stomp

./: .gitignore  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  commitlint.config.js  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: further.md  intro.md
src/snakemake_logger_plugin_stomp/: __init__.py  formatters.py  ssh_tunnel.py
tests/: test_plugin.py
