[project]
name = "snakemake-logger-plugin-stomp"
version = "0.0.1"
description = "Snakemake logger plugin for streaming events to STOMP message brokers"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}
keywords = ["snakemake", "plugin", "logger", "stomp", "activemq", "rabbitmq", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

dependencies = [
    "snakemake-interface-common>=1.22.0,<2",
    "snakemake-interface-logger-plugins>=2.0.0,<3",
    "stomp-py>=8.2.0",
]

[[project.authors]]
name = "Anil Panta"
email = "anilpanta2@gmail.org"

[project.urls]
Homepage = "https://github.com/JeffersonLab/snakemake-logger-plugin-stomp"
Repository = "https://github.com/JeffersonLab/snakemake-logger-plugin-stomp"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/logger/stomp.html"
"Bug Tracker" = "https://github.com/JeffersonLab/snakemake-logger-plugin-stomp/issues"

[project.entry-points."snakemake.logger_plugins"]
stomp = "snakemake_logger_plugin_stomp:LogHandler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "coverage",
    "pytest",
    "twine",
    "build",
]

# Pixi configuration for development
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.dependencies]
python = "3.11.*"
ruff = "*"
pip = "*"
pytest = "*"
coverage = "*"
packaging = "<26.0"

[tool.pixi.feature.dev.pypi-dependencies]
build = "*"
twine = "*"
pytest-cov = "*"

[tool.pixi.feature.dev.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
format-check = "ruff format --check ."
install-dev = "python -m pip install ."
test = {cmd = "pytest --cov=snakemake_logger_plugin_stomp --cov-report=xml:coverage-report/coverage.xml --cov-report=term-missing tests/", depends-on = ["install-dev"]}
build = "python -m build"
check-build = {cmd = "python -m twine check dist/*", depends-on = ["build"]}

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
include = ["src/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--strict-markers",
]

# Coverage configuration
[tool.coverage.run]
source = ["snakemake_logger_plugin_stomp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]